# LineBotSummarizer

./: .env.example  .gitignore  Dockerfile  README.md  architecture.md  pyproject.toml  setup.sh
app/: config.py  main.py
app/collectors/: base.py  dedup.py  google_news_url_resolver.py  keyword_monitor.py  rss_collector.py
app/models/: intel.py  message.py
app/pipeline/: aggregator.py  classifier.py  intel_writer.py  parser.py  writer.py
app/scheduler/: intel_scheduler.py
app/services/: ai_service.py  line_notify.py  url_fetcher.py
app/webhook/: handler.py
prompts/: phase1-scheduler-rss.md  phase2-keyword-google-news.md  phase3-reddit-github-trending.md  phase4-ai-analysis-daily-digest.md
